business card mobile device responsivness corrected overflow

--- a/style.css
+++ b/style.css
@@ -618,11 +618,11 @@ iframe {
   }
 
   .map {
-    width: 90%;
+    width: 100%;
   }
 
   .contact {
-    width: 90%;
+    width: 100%;
     text-align: left;
   }
 
@@ -638,6 +638,7 @@ iframe {
     height: 535px;
     width: 300px;
     padding-top: 1rem;
+    overflow: hidden;
   }
 
   .angelika {
